update: branding to Canto

--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
@@ -76,7 +76,7 @@
                     to: tokens_path(@conn, :index)
                   ) %>
               <%= link(
-                    gettext("Ether"),
+                    gettext("Canto"),
                     class: "dropdown-item #{tab_status("accounts", @conn.request_path)}",
                     to: address_path(@conn, :index)
                   ) %>
@@ -103,7 +103,7 @@
                     to: api_url() <> api_docs_path(@conn, :index)
                   ) %>
               <%= link(
-                    gettext("Eth RPC"),
+                    gettext("Canto RPC"),
                     class: "dropdown-item #{tab_status("eth-rpc-api-docs", @conn.request_path)}",
                     to: api_url() <> api_docs_path(@conn, :eth_rpc)
                   ) %>
