--- a/apps/block_scout_web/lib/block_scout_web/templates/api_docs/eth_rpc.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/api_docs/eth_rpc.html.eex
@@ -1,12 +1,12 @@
 <section class="container">
   <div class="card">
     <div class="card-body">
-      <h1 class="card-title margin-bottom-sm"><%= gettext("ETH RPC API Documentation") %></h1>
+      <h1 class="card-title margin-bottom-sm"><%= gettext("CANTO RPC API Documentation") %></h1>
       <p class="api-text-monospace" data-endpoint-url="<%= eth_rpc_api_url() %>">[ <%= gettext "Base URL:" %> <%= eth_rpc_api_url()%> ]</p>
       <p class="card-subtitle margin-bottom-0">
-        <%= gettext "This API is provided to support some rpc methods in the exact format specified for ethereum nodes, which can be found " %>
+        <%= gettext "This API is provided to support some rpc methods in the exact format specified for canto nodes, which can be found " %>
 
-        <a href="https://github.com/ethereum/wiki/wiki/JSON-RPC"><%= gettext "here." %></a>
+        <a href="https://docs.evmos.org/developers/json-rpc/endpoints.html"><%= gettext "here." %></a>
         <%= gettext "This is useful to allow sending requests to blockscout without having to change anything about the request." %>
         <%= gettext "However, in general, the" %> <%= link(
                   gettext("custom RPC"),
