--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/_footer.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/_footer.html.eex
@@ -37,10 +37,10 @@
         <h3>BlockScout</h3>
         <ul>
           <li><a href="<%= issue_link(@conn) %>" rel="noreferrer" class="footer-link" target="_blank"><%= gettext("Submit an Issue") %></a></li>
-          <li><a href="<%= Application.get_env(:block_scout_web, :footer)[:github_link] %>" rel="noreferrer" class="footer-link"><%= gettext("Contribute") %></a></li>
-          <li><a href="<%= Application.get_env(:block_scout_web, :footer)[:github_link] %>" rel="noreferrer" class="footer-link"><%= gettext("Chat (#blockscout)") %></a></li>
+          <li><a href="<%= Application.get_env(:block_scout_web, :footer)[:github_link] %>" rel="noreferrer" class="footer-link" target="_blank"><%= gettext("Contribute") %></a></li>
+          <li><a href="<%= Application.get_env(:block_scout_web, :footer)[:github_link] %>" rel="noreferrer" class="footer-link" target="_blank"><%= gettext("Chat (#blockscout)") %></a></li>
           <%= if Application.get_env(:block_scout_web, :footer)[:enable_forum_link] do %>
-            <li><a href="<%= Application.get_env(:block_scout_web, :footer)[:forum_link] %>" rel="noreferrer" class="footer-link"><%= gettext("Forum") %></a></li>
+            <li><a href="<%= Application.get_env(:block_scout_web, :footer)[:forum_link] %>" rel="noreferrer" class="footer-link" target="_blank"><%= gettext("Forum") %></a></li>
           <% end %>
           <%= render BlockScoutWeb.LayoutView, "_add_chain_to_mm.html" %>
         </ul>
@@ -52,7 +52,7 @@
           <h3><%= gettext("Main Networks") %></h3>
           <ul>
             <%= for %{title: title, url: url} <- main_nets do %>
-              <li><a href="<%= url %>" rel="norefferer" class="footer-link"> <%= title %> </a></li>
+              <li><a href="<%= url %>" rel="norefferer" class="footer-link" target="_blank"> <%= title %> </a></li>
             <% end %>
           </ul>
         </div>
@@ -65,7 +65,7 @@
           <h3><%= gettext("Test Networks") %></h3>
           <ul>
             <%= for %{title: title, url: url} <- test_nets do %>
-              <li><a href="<%= url %>" rel="noreferrer" class="footer-link"> <%= title %> </a></li>
+              <li><a href="<%= url %>" rel="noreferrer" class="footer-link" target="_blank"> <%= title %> </a></li>
             <% end %>
           </ul>
         </div>
@@ -76,7 +76,7 @@
           <h3><%= gettext("Other Explorers") %></h3>
           <ul>
             <%= for {name, url} <- other_explorers do %>
-              <li><a href="<%= url %>" rel="noreferrer" class="footer-link"> <%= name %> </a></li>
+              <li><a href="<%= url %>" rel="noreferrer" class="footer-link" target="_blank"> <%= name %> </a></li>
             <% end %>
           </ul>
         </div>
@@ -93,7 +93,8 @@
     <% end %>
 
     <div>
-        <%= gettext("Powered by NeoBase") %>
+        <%= gettext("Powered by ") %>
+        <a href="https://twitter.com/NeoBase_Studios/" rel="noreferrer" class="footer-link" target="_blank"><%= gettext("NeoBase") %></a>
       </div>
   </div>
 </footer>
